[package]
name = "delay_vst_replica"
version = "0.1.0"
edition = "2021"

[dependencies]
# We disable default features to skip WebGPU and compile strictly for WebGL (glow)
eframe = { version = "0.26", default-features = false, features = ["default_fonts", "glow"] }
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"